hphp/test/zend/good/ext/iconv/tests/iconv_strpos_basic.php.skipif
<?php
extension_loaded('iconv') or die('skip');
function_exists('iconv_strpos') or die("skip iconv_strpos() is not available in this build");
?>