hphp/test/zend/bad/ext/iconv/tests/iconv_get_encoding_error.php.skipif
<?php
extension_loaded('iconv') or die('skip');
function_exists('iconv_get_encoding') or die("skip iconv_get_encoding() is not available in this build");
?>